--- a/includes/modules/TimelineChild/style.css
+++ b/includes/modules/TimelineChild/style.css
@@ -446,10 +446,33 @@
       border-width: 0 0 var(--tw-cbx-bd-left-width) var(--tw-cbx-bd-left-width);
       box-shadow: -4px 4px 8px -4px rgba(0, 0, 0, 0.4);
     }
-    /* .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left .tmdivi-arrow{
-      border-width: var(--tw-cbx-bd-left-width) var(--tw-cbx-bd-left-width) 0 0;
-    } */
+
     
+    .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-bg-hover:hover .tmdivi-arrow,
+    .tmdivi-vertical.tmdivi-bg-gradient .tmdivi-story.tmdivi-bg-hover:hover .tmdivi-arrow,
+    .tmdivi-vertical.tmdivi-bg-multicolor .tmdivi-story.tmdivi-bg-hover:hover .tmdivi-arrow {
+      background: linear-gradient(
+        to top right,
+        var(--tw-cbx-title-bg, var(--tw-cbx-bg-hover)) 52%,
+        transparent 48%
+      );
+    }
+    
+    .tmdivi-vertical.tmdivi-wrapper
+      .tmdivi-story.tmdivi-bg-hover.tmdivi-story-left:hover
+      .tmdivi-arrow,
+    .tmdivi-vertical.tmdivi-bg-gradient
+      .tmdivi-story.tmdivi-bg-hover.tmdivi-story-left:hover
+      .tmdivi-arrow,
+    .tmdivi-vertical.tmdivi-bg-multicolor
+      .tmdivi-story.tmdivi-bg-hover.tmdivi-story-left:hover
+      .tmdivi-arrow {
+      background: linear-gradient(
+        to bottom left,
+        var(--tw-cbx-title-bg, var(--tw-cbx-bg-hover)) 52%,
+        transparent 48%
+      );
+    }
     
     .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left .tmdivi-arrow {
       left: auto;
@@ -458,6 +481,66 @@
           var(--tw-cbx-bd-left-width) / 3
       );
       box-shadow: 4px -4px 8px -4px rgba(0, 0, 0, 0.4);
+    }
+    
+    .tmdivi-vertical.tmdivi-wrapper.tmdivi-bg-multicolor
+    .tmdivi-story:nth-child(4n - 2)
+    .tmdivi-arrow {
+    background: linear-gradient(
+      to top right,
+      var(--tw-arw-bg2, var(--tw-arw-bg)) 52%,
+      transparent 48%
+    );
+    }
+    
+    .tmdivi-vertical.tmdivi-wrapper.tmdivi-bg-multicolor
+    .tmdivi-story:nth-child(4n - 1)
+    .tmdivi-arrow {
+    background: linear-gradient(
+      to top right,
+      var(--tw-arw-bg3, var(--tw-arw-bg)) 52%,
+      transparent 48%
+    );
+    }
+    
+    .tmdivi-vertical.tmdivi-wrapper.tmdivi-bg-multicolor
+    .tmdivi-story:nth-child(4n)
+    .tmdivi-arrow {
+    background: linear-gradient(
+      to top right,
+      var(--tw-arw-bg4, var(--tw-arw-bg)) 52%,
+      transparent 48%
+    );
+    }
+    
+    .tmdivi-vertical.tmdivi-wrapper.tmdivi-bg-multicolor
+      .tmdivi-story:nth-child(4n - 2).tmdivi-story-left
+      .tmdivi-arrow {
+      background: linear-gradient(
+        to bottom left,
+        var(--tw-arw-bg2, var(--tw-arw-bg)) 52%,
+        transparent 48%
+      );
+    }
+    
+    .tmdivi-vertical.tmdivi-wrapper.tmdivi-bg-multicolor
+      .tmdivi-story:nth-child(4n - 1).tmdivi-story-left
+      .tmdivi-arrow {
+      background: linear-gradient(
+        to bottom left,
+        var(--tw-arw-bg3, var(--tw-arw-bg)) 52%,
+        transparent 48%
+      );
+    }
+    
+    .tmdivi-vertical.tmdivi-wrapper.tmdivi-bg-multicolor
+      .tmdivi-story:nth-child(4n).tmdivi-story-left
+      .tmdivi-arrow {
+      background: linear-gradient(
+        to bottom left,
+        var(--tw-arw-bg4, var(--tw-arw-bg)) 52%,
+        transparent 48%
+      );
     }
     
     .tmdivi-vertical.tmdivi-wrapper .tmdivi-arrow-line {
@@ -472,6 +555,9 @@
         calc(var(--tw-line-bd-width) * 1px) 0px;
     }
     
+    .tmdivi-vertical.tmdivi-wrapper.tmdivi-end-out-viewport:not(.tmdivi-start-out-viewport) .tmdivi-story:not(.tmdivi-out-viewport) .tmdivi-arrow-line{
+      background-color:var(--tw-line-filling-color);
+    }
     .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left .tmdivi-arrow-line {
       left: auto;
       right: calc(0px - var(--tw-ibx-size) * 0.5);
@@ -605,10 +691,10 @@
     .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left .tmdivi-media {
       justify-content: var(--tw-cbx-img-align, var(--tw-cbx-text-align-alternate));
     }
-    .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left .tmdivi-description {
+    /* .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left .tmdivi-description {
       text-align: var(--tw-cbx-des-text-align);
     }
-    
+     */
     
     .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left .tmdivi-button {
       justify-content: var(--tw-cbx-btn-align, var(--tw-cbx-text-align-alternate));
@@ -640,6 +726,82 @@
         );
       }
     
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story,
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-center {
+        width: calc(100% - var(--tw-ibx-size) * 1.5);
+        float: right;
+        text-align: left;
+        margin-bottom: var(--tw-cbx-bottom-margin);
+        top: 0;
+      }
+    
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story:not(.tmdivi-label-content-inside) .tmdivi-labels,
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story:not(.tmdivi-label-content-inside).tmdivi-story-center .tmdivi-labels {
+        position: relative;
+        left: 0;
+        top: 0;
+        text-align: left;
+        width: 100%;
+      }
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story:not(.tmdivi-label-content-inside) .tmdivi-labels.tmdivi-label-bg{
+        margin-bottom: 8px;
+      }
+      .tmdivi-vertical .tmdivi-story-left.tmdivi-label-content-top .tmdivi-labels{
+        align-items: flex-start;
+      }
+    
+      .tmdivi-vertical.tmdivi-wrapper.tmdivi-bg-multicolor
+      .tmdivi-story:nth-child(4n - 2)
+      .tmdivi-arrow {
+      background: linear-gradient(
+        to top right,
+        var(--tw-arw-bg2, var(--tw-arw-bg)) 52%,
+        transparent 48%
+      ) !important;
+    }
+    
+    .tmdivi-vertical.tmdivi-wrapper.tmdivi-bg-multicolor
+      .tmdivi-story:nth-child(4n - 1)
+      .tmdivi-arrow {
+      background: linear-gradient(
+        to top right,
+        var(--tw-arw-bg3, var(--tw-arw-bg)) 52%,
+        transparent 48%
+      ) !important;
+    }
+    
+    .tmdivi-vertical.tmdivi-wrapper.tmdivi-bg-multicolor
+      .tmdivi-story:nth-child(4n)
+      .tmdivi-arrow {
+      background: linear-gradient(
+        to top right,
+        var(--tw-arw-bg4, var(--tw-arw-bg)) 52%,
+        transparent 48%
+      ) !important;
+    }
+    
+      .tmdivi-vertical .tmdivi-story-right .tmdivi-label-bg.tmdivi-lbl-arrow .tmdivi-inner-label:before {
+        right: auto;
+        left: calc(0px + var(--tw-ibx-size)/7 - var(--lbl-bd-width)/3 - var(--tw-ibx-size)/3.5);
+        transform: rotate(45deg);
+      }
+    
+      .tmdivi-vertical .tmdivi-story .tmdivi-label-bg.tmdivi-lbl-arrow-line .tmdivi-inner-label::after {
+          left: calc(0px - var(--tw-ibx-size) + var(--tw-line-width) * 0.5 - var(--lbl-bd-width)) !important;
+          right: auto;
+          width: calc(var(--tw-ibx-size) - var(--tw-line-width) * 0.5 + var(--lbl-bd-width));
+      }
+    
+      .tmdivi-vertical .tmdivi-story .tmdivi-labels.tmdivi-label-bg,
+      .tmdivi-vertical-left .tmdivi-story-right.tmdivi-label-content-top .tmdivi-labels,
+      .tmdivi-vertical-left .tmdivi-story-right.tmdivi-label-content-top .tmdivi-labels.tmdivi-label-bg {
+          align-items: start;
+      }
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-center:before,
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-center:after {
+        display: none;
+        opacity: 0;
+      }
     
       .tmdivi-vertical.tmdivi-wrapper .tmdivi-icon {
         top: calc(
@@ -674,6 +836,42 @@
                 ) * var(--tw-ibx-position) / 100
             )  + var(--lbl-bd-width)*2
         );
+      }
+    
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story-center .tmdivi-icondot {
+        left: calc(var(--tw-ibx-size) * 0.75 - var(--tw-ibx-size) * 2);
+        top: calc(
+          var(--tw-ibx-position) * 1% - var(--tw-ibx-size) * var(--tw-ibx-position) /
+            100 + var(--tw-ibx-size) / 4 +
+            (
+              var(--tw-lbl-big-size) + var(--tw-lbl-small-size) + var(--tw-lbl-gap) +
+                12px
+            ) -
+            (
+              (
+                  var(--tw-lbl-big-size) + var(--tw-lbl-small-size) +
+                    var(--tw-lbl-gap) + 12px
+                ) * var(--tw-ibx-position) / 100
+            )
+        );
+      }
+    
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story-center .tmdivi-icon {
+        top: calc(
+          var(--tw-ibx-position) * 1% - var(--tw-ibx-size) * var(--tw-ibx-position) /
+            100 +
+            (
+              var(--tw-lbl-big-size) + var(--tw-lbl-small-size) + var(--tw-lbl-gap) +
+                12px
+            ) -
+            (
+              (
+                  var(--tw-lbl-big-size) + var(--tw-lbl-small-size) +
+                    var(--tw-lbl-gap) + 12px
+                ) * var(--tw-ibx-position) / 100
+            )
+        );
+        left: calc(var(--tw-ibx-size) / 2 - var(--tw-ibx-size) * 2);
       }
     
       .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left {
@@ -718,7 +916,7 @@
         left: calc(0px - var(--tw-ibx-size) * 0.5);
         top: calc(
           var(--tw-ibx-position) * 1% - var(--tw-ibx-size) * var(--tw-ibx-position) /
-          100 + var(--tw-ibx-size) / 2 - var(--tw-line-width) / 2 +
+          100 + var(--tw-ibx-size) / 3 - var(--tw-line-width) / 2 +
           (
             var(--tw-lbl-big-size) + var(--tw-lbl-small-size) + var(--tw-lbl-gap) +
             12px
@@ -730,7 +928,41 @@
                 ) * var(--tw-ibx-position) / 100
                 ) + var(--lbl-bd-width)*2
                 );
-      }      
+      }
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story-no-icon.tmdivi-story .tmdivi-arrow-line{
+        top: calc(
+          var(--tw-ibx-position) * 1% - var(--tw-ibx-size) * var(--tw-ibx-position) /
+          100 + var(--tw-ibx-size) / 2.3 - var(--tw-line-width) / 2 +
+          (
+            var(--tw-lbl-big-size) + var(--tw-lbl-small-size) + var(--tw-lbl-gap) +
+            12px
+            ) -
+            (
+              (
+                var(--tw-lbl-big-size) + var(--tw-lbl-small-size) +
+                var(--tw-lbl-gap) + 12px
+                ) * var(--tw-ibx-position) / 100
+                ) + var(--lbl-bd-width)*2
+                );
+      }
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-label-content-inside .tmdivi-arrow,
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-label-content-inside.tmdivi-story.tmdivi-story-left .tmdivi-arrow,
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-label-content-top .tmdivi-arrow,
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-label-content-top.tmdivi-story.tmdivi-story-left .tmdivi-arrow {
+        top: calc(var(--tw-ibx-position) * 1% - var(--tw-ibx-size) * var(--tw-ibx-position)/ 100 + var(--tw-ibx-size)/ 2 - var(--tw-ibx-size)/ 7);
+      }
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-label-content-inside .tmdivi-icon,
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-label-content-top .tmdivi-icon{
+        top: calc(var(--tw-ibx-position) * 1% - var(--tw-ibx-size) * var(--tw-ibx-position)/ 100);
+        transform: initial;
+      }
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-label-content-inside .tmdivi-arrow-line,
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-label-content-inside.tmdivi-story.tmdivi-story-left .tmdivi-arrow-line,
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-label-content-top .tmdivi-arrow-line,
+      .tmdivi-vertical.tmdivi-wrapper .tmdivi-label-content-top.tmdivi-story.tmdivi-story-left .tmdivi-arrow-line{
+        top: calc(var(--tw-ibx-position) * 1% - var(--tw-ibx-size) * var(--tw-ibx-position)/ 100 + var(--tw-ibx-size)/ 2 - var(--tw-line-width)/ 2);
+      }
+      
       .tmdivi-vertical.tmdivi-wrapper .tmdivi-story-no-icon.tmdivi-label-content-inside .tmdivi-arrow-line,  .tmdivi-vertical.tmdivi-wrapper .tmdivi-story-no-icon.tmdivi-label-content-inside.tmdivi-story.tmdivi-story-left .tmdivi-arrow-line,
       .tmdivi-vertical.tmdivi-wrapper .tmdivi-story-no-icon.tmdivi-label-content-top .tmdivi-arrow-line,
       .tmdivi-vertical.tmdivi-wrapper .tmdivi-story-no-icon.tmdivi-label-content-top.tmdivi-story.tmdivi-story-left .tmdivi-arrow-line
@@ -790,10 +1022,10 @@
         text-align: var(--tw-cbx-text-align);
       }
     
-      .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left .tmdivi-description,
+      /* .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left .tmdivi-description,
       .tmdivi-vertical.tmdivi-wrapper .tmdivi-compact .tmdivi-story.tmdivi-story-left.tmdivi-label-content-inside .tmdivi-labels {
         text-align: var(--tw-cbx-text-align);
-      }
+      } */
     
       .tmdivi-vertical.tmdivi-wrapper .tmdivi-story.tmdivi-story-left .tmdivi-media {
         justify-content: var(--tw-cbx-img-align, var(--tw-cbx-text-align));
